[launcher] initial launcher impl
working state